--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,15 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   box-sizing: border-box;
 }
 
 h1 {
-  padding: .5rem;
+  padding: 0.5rem 2rem;
   margin: 0;
-  font-family: 'Roboto Slab', serif;
-  font-size: 4rem;
-  background: rgba(255, 0, 0, .8);
+  font-family: "Roboto Condensed", serif;
+  font-size: 3rem;
+  background: #2abe69;
 }
 
 p {
@@ -17,7 +17,7 @@ p {
 }
 
 main {
-  margin: 0 auto
+  margin: 0 auto;
 }
 
 a {
@@ -33,10 +33,10 @@ input,
 textarea {
   height: 2rem;
   padding: 0 1rem;
-  font-family: 'Roboto Condensed';
+  font-family: "Roboto Condensed";
   font-size: 1.5rem;
   border: none;
-  box-shadow: inset 8px 3px 18px -4px rgba(0, 0, 0, .4)
+  box-shadow: inset 8px 3px 18px -4px rgba(0, 0, 0, 0.4);
 }
 
 input:focus,
@@ -54,7 +54,7 @@ nav {
   justify-content: space-between;
   padding: 1rem;
   margin: 0;
-  font-family: 'Roboto Condnsed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 20px;
   z-index: 100;
 }
@@ -62,12 +62,12 @@ nav {
 nav a {
   padding: 0 2rem;
   color: #eee;
-  transition: .4s
+  transition: 0.4s;
 }
 
 nav a:hover {
   text-decoration: none;
-  color: red;
+  color: #2abe69;
 }
 
 nav ul {
@@ -75,6 +75,39 @@ nav ul {
   list-style: none;
   align-items: center;
   justify-content: space-around;
+  margin: 0;
+  height: 100%;
+}
+
+.active {
+  color: #2abe69;
+}
+
+.logo {
+  display: flex;
+  height: 100%;
+
+  padding: 0 2rem;
+  align-items: center;
+  color: #fff;
+  transition: 0.4s;
+}
+
+.logo img {
+  height: 70px;
+}
+
+.logo img:hover {
+  background: #000;
+}
+
+#menu-icon {
+  height: 100%;
+  font-size: 1.5rem;
+  padding: 0 4px;
+  color: #eee;
+  display: none;
+  align-items: center;
 }
 
 /* Searchbar Styles */
@@ -93,6 +126,22 @@ nav ul {
   width: 100%;
 }
 
+#search-icon {
+  color: #fff;
+  padding: 0 2rem;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+#search-icon:hover {
+  color: #2abe69;
+}
+
+/* Mobile Menu Styles */
+#slideout-menu {
+  display: none;
+}
+
 /* Banner Styles */
 #banner {
   height: 100vh;
@@ -100,7 +149,7 @@ nav ul {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background: rgba(0, 0, 0, .2) url('../img/3.png');
+  background: rgba(0, 0, 0, 0.2) url("../img/3.png");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -109,12 +158,91 @@ nav ul {
 }
 
 #banner h1 {
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 #banner h3 {
   background: #000;
-  border-radius: .5rem;
-  padding: 0 2rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem 2rem;
   font-size: 2rem;
+}
+
+/* Section Styles */
+section {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.section-heading {
+  font-size: 2rem;
+  font-family: "Roboto Condensed", sans-serif;
+  width: 220px;
+  padding: .5rem 1.5rem;
+  margin-left: 1rem;
+  border-right: 5px solid #000;
+}
+
+.section-heading:hover {
+  padding: 1rem 2rem;
+  background: #2abe69;
+  cursor: pointer;
+}
+
+/* Card Styles */
+.card-image {
+  transition: 0.4s;
+}
+
+.card-image:hover {
+  box-shadow: 0 10px 6px -6px #777;
+}
+
+.card .card-description {
+  padding: 0 .5rem;
+}
+
+.btn-read-more {
+  padding: .5rem 1.5rem;
+  border: 3px solid #000;
+  transition: 0.4s;
+  display: inline-block;
+  margin: 0 0 1.5rem 1.5rem;
+  font-weight: 700;
+  cursor: pointer;
+  background: #fff;
+}
+
+.btn-read-more:hover {
+  background: #2abe69;
+  text-decoration: none;
+  padding: .5rem 5rem .5rem 1.5rem;
+  color: #fff;
+}
+
+/* Source Code Section Styles */
+#source-code-section p {
+  padding: .5rem;
+  text-align: center;
+}
+
+#source-code-section a {
+  margin: .5rem;
+  text-align: center;
+}
+
+/* Media Queries */
+@media (min-width: 720px) {
+  main {
+    width: 90%;
+  }
+
+  .card {
+    width: 45%;
+  }
+
+  .card .card-image img {
+    width: 100%;
+  }
 }
