--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ nav ul {
 
 /* Mobile Menu Styles */
 #slideout-menu {
-  display: none;
+  background: #202125;
 }
 
 /* Banner Styles */
@@ -179,7 +179,7 @@ section {
   font-size: 2rem;
   font-family: "Roboto Condensed", sans-serif;
   width: 220px;
-  padding: .5rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   margin-left: 1rem;
   border-right: 5px solid #000;
 }
@@ -200,11 +200,11 @@ section {
 }
 
 .card .card-description {
-  padding: 0 .5rem;
+  padding: 0 0.5rem;
 }
 
 .btn-read-more {
-  padding: .5rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   border: 3px solid #000;
   transition: 0.4s;
   display: inline-block;
@@ -217,19 +217,81 @@ section {
 .btn-read-more:hover {
   background: #2abe69;
   text-decoration: none;
-  padding: .5rem 5rem .5rem 1.5rem;
+  padding: 0.5rem 5rem 0.5rem 1.5rem;
   color: #fff;
 }
 
 /* Source Code Section Styles */
 #source-code-section p {
-  padding: .5rem;
+  padding: 0.5rem;
   text-align: center;
 }
 
 #source-code-section a {
-  margin: .5rem;
+  margin: 0.5rem;
   text-align: center;
+}
+
+/* Footer Styles */
+footer {
+  background: #000;
+  padding: 0.5rem;
+  color: #eee;
+  display: flex;
+  margin-top: 4rem;
+}
+
+footer a {
+  color: #fff;
+}
+
+#footer-left {
+  flex: 1;
+  border-right: 1px solid #2abe69;
+  padding-left: 2rem;
+}
+
+#footer-left ul {
+  padding: 0;
+  list-style: none;
+  line-height: 1.5;
+}
+/* Right Footer */
+#footer-right {
+  flex: 2;
+  text-align: center;
+  padding: 0.5rem;
+}
+
+#social-media-footer ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+}
+
+#social-media-footer ul li {
+  font-size: 2rem;
+  padding: 1rem;
+  transition: 0.4s;
+}
+
+#social-media-footer ul li a .fa-youtube,
+#social-media-footer ul li a .fa-github,
+#social-media-footer ul li a .fa-facebook {
+  color: #fff;
+  transition: 0.4s;
+}
+#social-media-footer ul li:hover a .fa-youtube {
+  color: red;
+}
+
+#social-media-footer ul li:hover a .fa-github {
+  color: #bbb;
+}
+
+#social-media-footer ul li:hover a .fa-facebook {
+  color: #3b5998;
 }
 
 /* Media Queries */
@@ -244,5 +306,11 @@ section {
 
   .card .card-image img {
     width: 100%;
+  }
+}
+
+@media (min-width: 1200px) {
+  main {
+    width: 85%;
   }
 }
