--- a/css/styles.css
+++ b/css/styles.css
@@ -104,10 +104,16 @@ nav ul {
 #menu-icon {
   height: 100%;
   font-size: 1.5rem;
-  padding: 0 4px;
+  padding: 0 2rem;
   color: #eee;
   display: none;
   align-items: center;
+  cursor: pointer;
+}
+
+#menu-icon:hover {
+  color: #2abe69;
+  transition: 0.4s;
 }
 
 /* Searchbar Styles */
@@ -139,7 +145,39 @@ nav ul {
 
 /* Mobile Menu Styles */
 #slideout-menu {
-  background: #202125;
+  display: none;
+  background: #222;
+  z-index: 100;
+  position: fixed;
+  transition: 0.4s;
+  margin-top: 74px;
+  width: 100%;
+  text-align: center;
+  opacity: 0;
+  pointer-events: none;
+}
+
+#slideout-menu ul {
+  list-style-type: none;
+  padding: 1rem 2rem;
+}
+
+#slideout-menu ul li {
+  padding: 0.6rem;
+}
+
+#slideout-menu a {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.3rem;
+  color: #fff;
+}
+
+#slideout-menu input {
+  width: 85%;
+  padding: 0.5rem;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.3rem;
+  text-align: center;
 }
 
 /* Banner Styles */
@@ -256,6 +294,7 @@ footer a {
   list-style: none;
   line-height: 1.5;
 }
+
 /* Right Footer */
 #footer-right {
   flex: 2;
@@ -282,6 +321,7 @@ footer a {
   color: #fff;
   transition: 0.4s;
 }
+
 #social-media-footer ul li:hover a .fa-youtube {
   color: red;
 }
@@ -295,6 +335,95 @@ footer a {
 }
 
 /* Media Queries */
+@media (max-width: 900px) {
+  nav ul {
+    display: none;
+  }
+
+  #menu-icon {
+    display: flex;
+  }
+
+  #slideout-menu {
+    display: block;
+  }
+
+  #searchbar {
+    display: none;
+  }
+}
+
+@media (max-width: 719px) {
+  main {
+    width: 95%;
+  }
+
+  section {
+    flex-direction: column;
+  }
+
+  .card,
+  .card .card-image img {
+    width: 100%;
+  }
+
+  footer {
+    flex-direction: column;
+    text-align: center;
+    padding: 1rem 0 0;
+  }
+
+  footer #footer-left {
+    flex: 1;
+    border-left: none;
+    border-right: none;
+    padding: 0;
+  }
+
+  #footer-left ul {
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  footer #footer-left li {
+    padding: 0.5rem;
+  }
+
+  footer #footer-right {
+    background: #eee;
+    color: #000;
+  }
+
+  #social-media-footer ul li a .fa-youtube,
+  #social-media-footer ul li a .fa-github,
+  #social-media-footer ul li a .fa-facebook {
+    color: #000;
+    transition: 0.4s;
+  }
+}
+
+@media (max-width: 600px) {
+  main {
+    width: 100%;
+  }
+
+  h1 {
+    font-size: 2.7rem;
+  }
+
+  #banner h3 {
+    font-size: 1.4rem;
+  }
+
+  .card {
+    text-align: center;
+  }
+
+  .logo {
+    padding: 0;
+  }
+}
+
 @media (min-width: 720px) {
   main {
     width: 90%;
