Styles added for blog post and about page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ nav {
   width: 100%;
   background: #202125;
   position: fixed;
+  top: 0;
   display: flex;
   justify-content: space-between;
   padding: 1rem;
@@ -241,6 +242,18 @@ section {
   padding: 0 0.5rem;
 }
 
+.card-meta-blogpost {
+  color: #333;
+  font-size: 1rem;
+  padding: 1rem;
+  font-family: 'Roboto', serif;
+}
+
+.card-meta-blogpost a {
+  color: #333;
+}
+
+/* Button Styles */
 .btn-read-more {
   padding: 0.5rem 1.5rem;
   border: 3px solid #000;
@@ -350,11 +363,12 @@ footer a {
   background-color: #2abe69;
 }
 
-.card-meta {
+.card-meta,
+.card-meta-blogpost {
   color: #333;
   font-size: 1rem;
   padding-left: .5rem;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .card-meta a {
@@ -380,6 +394,41 @@ footer a {
   border-top: 3px solid #000;
 }
 
+/* Individual Blog Post Styles */
+.post-container {
+  display: flex;
+}
+
+#blog-post {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  border-left: 1px solid #999;
+}
+
+#blog-post .card {
+  width: 100%;
+}
+
+#blog-post .card-image:hover {
+  box-shadow: none;
+}
+
+/* Sidebar */
+#sidebar {
+  background: #333;
+  flex: 1;
+  padding: .5rem 1rem;
+  color: #fff;
+  box-shadow: inset 27px 0 51px -18px rgba(0, 0, 0, 0.75);
+}
+
+/* Comment Section Styles */
+#comments-section {
+  border-top: 2px solid #eee;
+  padding: .5rem;
+}
+
 /* Media Queries */
 @media (max-width: 900px) {
   nav ul {
@@ -395,6 +444,15 @@ footer a {
   }
 
   #searchbar {
+    display: none;
+  }
+
+  #blog-post {
+    width: 100%;
+    border-left: 0;
+  }
+
+  #sidebar {
     display: none;
   }
 }
